# fast-api-examples

./: README.md  ci-test-requirements.txt  pyproject.toml
fastapi_examples/: app.py  app_with_db.py
